uniresolver-plugin/kubernetes/resolver-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oydid
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resolver
  namespace: oydid
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resolver
  template:
    metadata:
      name: resolver
      labels:
        app: resolver
    spec:
      containers:
      - name: resolver
        image: oydeu/oydid-resolver:250503
        ports:
        - containerPort: 3000
---
kind: Service
apiVersion: v1
metadata:
  name: resolver
  namespace: oydid
spec:
  selector:
    app: resolver
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resolver
  namespace: oydid
  annotations:
    certmanager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - oydid-resolver.data-container.net
    secretName: resolver-tls
  rules:
  - host: oydid-resolver.data-container.net
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: resolver
            port:
              number: 80
